Update fix btn taikhoan on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -289,6 +289,10 @@
     .bestseller {
         padding-top: 6rem;
     }
+
+     .header__hover-product-top-link {
+        width: 15rem;
+    }
 }
 
 
